--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,14 @@
             <version>2.14.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
@@ -120,11 +128,9 @@
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.10.0</version>
-                <configuration>
-                    <reportVersion>2.4.1</reportVersion>
-                </configuration>
+                <version>2.9</version>
             </plugin>
+
         </plugins>
     </build>
 
